--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
           </span>
           <span>
             <p>Account Number</p>
-            <h2>0713033127</h2>
+            <h2>0730282195685</h2>
             </span>
-            <p>Incase of any issues with payment, please contact us on <a href="tel:+254708029999" class="green-text">+254 708 029 999</a></p>
+            <p>Incase of any issues with payment, please contact us on <a href="tel:+610413050963" class="green-text">+61 041 305 0963</a> or <a href="tel:+254708029999" class="green-text">+254 708 029 999</a></p>
 
       </div>
     </section>
