--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
     </section>
 
-    <div class="about container" id="about">
+    <section class="about container" id="about">
       <img src="assets/about.jpg" alt="Design Process" data-aos="fade-up" data-aos-duration="1000"/>
       <div class="content" data-aos="fade-down" data-aos-duration="1000">
         <h2>Our Comprehensive Design Process</h2>
@@ -168,7 +168,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </section>
 
     <section class="clientele container" id="clientele">
       <div class="title" data-aos="fade-down" data-aos-duration="1000">
@@ -189,8 +189,10 @@
       </div>
     </section>
 
-    <div class="slider-container">
-      <div class="title" data-aos="fade-down" data-aos-duration="1000">
+    <section class="container">
+
+      <div class="slider-container">
+        <div class="title" data-aos="fade-down" data-aos-duration="1000">
         <h2>Our Latest Work</h2>
         <p>Check out some of our latest projects.</p>
       </div>
@@ -205,6 +207,7 @@
        <!-- Swiper Pagination (Dots) -->
        <div class="swiper-pagination"></div>
     </div>
+  </section>
 
     <section class="design container">
       <div class="design-container">
