--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="navbar">
         <div class="logo">
           <a href="index.html">
-            <h1><img src="./assets/logo.jpg" alt="" /> Swanitech</h1>
+            <h1 class="red"><img src="./assets/logo.jpg" alt="" /> Swanitech Ventures Limited</h1>
           </a>
         </div>
         <div class="menu" id="menu">
@@ -47,7 +47,7 @@
           <a href="#contact">Contact us</a>
         </div>
         <div class="hero_right" data-aos="fade-left" data-aos-duration="1000">
-          <img src="./assets/hero.avif" class="hero_img" alt="" />
+          <img src="./assets/plotter.png" class="hero_img" alt="" />
         </div>
       </div>
     </div>
