--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="navbar">
         <div class="logo">
           <a href="index.html">
-            <h1 class="red"><img src="./assets/logo.jpg" alt="" /> Swanitech Ventures Limited</h1>
+            <h1 class="red"><img src="./assets/logo.jpg" alt="" /> Swanitech Ventures</h1>
           </a>
         </div>
         <div class="menu" id="menu">
