--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </nav>
 
     <div class="hero_container container">
-      <div>
+      <div class="hero_content">
         <div class="hero_left" data-aos="fade-right" data-aos-duration="1000">
-          <h1>Unleash Your <span class="green">Creative</span> Potential</h1>
+          <h1>Unleash the <span class="green">Power</span> Your Brand with us</h1>
           <p>
             At Swanitech, we transform ideas into stunning visuals. Our graphic
             design services are tailored to meet your unique needs, ensuring
@@ -202,6 +202,17 @@
                <div class="swiper-slide"><img src="assets/swipper1.jpg" alt="Image 1"></div>
                <div class="swiper-slide"><img src="assets/swipper2.jpg" alt="Image 2"></div>
                <div class="swiper-slide"><img src="assets/swipper3.jpg" alt="Image 3"></div>
+               <div class="swiper-slide"><img src="assets/s1.jpg" alt="Image 4"></div>
+               <div class="swiper-slide"><img src="assets/s2.jpg" alt="Image 
+                5"></div>
+               <div class="swiper-slide"><img src="assets/s3.jpg" alt="Image 6"></div>
+               <div class="swiper-slide"><img src="assets/s0.jpg" alt="Image 7"></div>
+               <div class="swiper-slide"><img src="assets/s4.jpg" alt="Image 8"></div>
+               <div class="swiper-slide"><img src="assets/s5.jpg" alt="Image 9"></div>
+               <div class="swiper-slide"><img src="assets/s6.jpg" alt="Image 10"></div>
+               <div class="swiper-slide"><img src="assets/s7.jpg" alt="Image 11"></div>
+               <div class="swiper-slide"><img src="assets/s8.jpg" alt="Image 12"></div>
+               <div class="swiper-slide"><img src="assets/s9.jpg" alt="Image 13"></div>
            </div>
        </div>
        <!-- Swiper Pagination (Dots) -->
