--- a/index.html
+++ b/index.html
@@ -198,25 +198,28 @@
       </div>
        <!-- Swiper Navigation Buttons -->
        <div class="swiper">
-           <div class="swiper-wrapper">
-               <div class="swiper-slide"><img src="assets/swipper1.jpg" alt="Image 1"></div>
-               <div class="swiper-slide"><img src="assets/swipper2.jpg" alt="Image 2"></div>
-               <div class="swiper-slide"><img src="assets/swipper3.jpg" alt="Image 3"></div>
-               <div class="swiper-slide"><img src="assets/s1.jpg" alt="Image 4"></div>
-               <div class="swiper-slide"><img src="assets/s2.jpg" alt="Image 
-                5"></div>
-               <div class="swiper-slide"><img src="assets/s3.jpg" alt="Image 6"></div>
-               <div class="swiper-slide"><img src="assets/s0.jpg" alt="Image 7"></div>
-               <div class="swiper-slide"><img src="assets/s4.jpg" alt="Image 8"></div>
-               <div class="swiper-slide"><img src="assets/s5.jpg" alt="Image 9"></div>
-               <div class="swiper-slide"><img src="assets/s6.jpg" alt="Image 10"></div>
-               <div class="swiper-slide"><img src="assets/s7.jpg" alt="Image 11"></div>
-               <div class="swiper-slide"><img src="assets/s8.jpg" alt="Image 12"></div>
-               <div class="swiper-slide"><img src="assets/s9.jpg" alt="Image 13"></div>
-           </div>
-       </div>
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="assets/swipper1.jpg" alt="Image 1" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/swipper2.jpg" alt="Image 2" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/swipper3.jpg" alt="Image 3" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s1.jpg" alt="Image 4" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s2.jpg" alt="Image 5" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s3.jpg" alt="Image 6" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s0.jpg" alt="Image 7" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s4.jpg" alt="Image 8" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s5.jpg" alt="Image 9" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s6.jpg" alt="Image 10" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s7.jpg" alt="Image 11" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s8.jpg" alt="Image 12" onclick="openLightbox(this)"></div>
+            <div class="swiper-slide"><img src="assets/s9.jpg" alt="Image 13" onclick="openLightbox(this)"></div>
+        </div>
+    </div>
        <!-- Swiper Pagination (Dots) -->
        <div class="swiper-pagination"></div>
+       <div id="lightbox" class="lightbox">
+        <span class="close" onclick="closeLightbox()">&times;</span>
+        <img class="lightbox-content" id="lightbox-img">
+    </div>
     </div>
   </section>
 
