--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               >
             </p>
             <p><i class="ph ph-phone"></i> <a href="tel:+254708029999">+254 708 029 999</a></p>
-            <p><i class="ph ph-phone"></i> <a href="tel:+254708029999">+614 1305 0963</a></p>
+            <p><i class="ph ph-phone"></i> <a href="tel:+61 413 050 963">+61413050963</a></p>
           </div>
           <div class="right" data-aos="fade-right" data-aos-duration="1000">
             <form action="https://formsubmit.co/your-email@example.com" method="POST">
@@ -373,7 +373,7 @@
             >
           </p>
           <p><i class="ph ph-phone"></i> <a href="tel:+254708029999">+254 708 029 999</a></p>
-          <p><i class="ph ph-phone"></i> <a href="tel:+254708029999">+614 1305 0963</a></p>
+          <p><i class="ph ph-phone"></i> <a href="tel:+61413050963">+61 413 050 963</a></p>
         </div>
 
         <!-- Social Media -->
