--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="navbar">
         <div class="logo">
           <a href="index.html">
-            <h1 class="red"><img src="./assets/logo.jpg" alt="" /> Swanitech Ventures</h1>
+            <h1 class="red"><img src="./assets/logo.jpg" alt="" /> Swanitech Ventures Limited</h1>
           </a>
         </div>
         <div class="menu" id="menu">
@@ -53,7 +53,7 @@
     <div class="hero_container container">
       <div class="hero_content">
         <div class="hero_left" data-aos="fade-right" data-aos-duration="1000">
-          <h1>Unleash the <span class="green">Power</span> Your Brand with us</h1>
+          <h1>Unleash the <span class="green">Power</span> of Your Brand with us</h1>
           <p>
             At Swanitech, we transform ideas into stunning visuals. Our graphic
             design services are tailored to meet your unique needs, ensuring
@@ -340,8 +340,8 @@
             <h1>Let's talk!</h1>
             <p>
               <i class="ph ph-envelope-simple"></i>
-              <a href="mailto:swanitechventures@yahoo.com"
-                >swanitechventures@yahoo.com</a
+              <a href="mailto:info@swanitechventuresltd.com"
+                >info@swanitechventuresltd.com</a
               >
             </p>
             <p><i class="ph ph-phone"></i> <a href="tel:+254708029999">+254 708 029 999</a></p>
@@ -368,8 +368,8 @@
           <p>Innovating technology solutions for businesses worldwide.</p>
           <p>
             <i class="ph ph-envelope-simple"></i>
-            <a href="mailto:swanitechventures@yahoo.com"
-              >swanitechventures@yahoo.com</a
+            <a href="mailto:info@swanitechventuresltd.com"
+              >info@swanitechventuresltd.com</a
             >
           </p>
           <p><i class="ph ph-phone"></i> <a href="tel:+254708029999">+254 708 029 999</a></p>
