--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
       <!-- Copyright Section -->
       <div class="footer-bottom">
         <p>© 2025 Swanitech Ventures Limited. All rights reserved.</p>
+        <p class="brian">Create by <a href="https://briankipkemoi.pages.dev/" target="_blank">Brian Cheruiyot</a></p>
       </div>
     </footer>
 
